--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 21 17:19:11 PST 2016
-ndk.dir=/Users/vegdahl/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/vegdahl/Library/Android/sdk
+#Thu Oct 12 16:22:55 PDT 2017
+sdk.dir=C\:\\Users\\lytle\\AppData\\Local\\Android\\Sdk
